--- a/writing/writing_css.css
+++ b/writing/writing_css.css
@@ -1,4 +1,6 @@
 body{
+	width : 100%;
+	height : 100%;
 	padding : 0px;
 	margin : 0px;
 }
@@ -7,7 +9,7 @@ body{
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	width: 1272px;
+	width: 100%;
 	height: 100px;
 	background-color: #3E606F;
 	text-align: left;
@@ -33,7 +35,7 @@ body{
 
 #title {
 	position : absolute;
-	left : 10%;
+	left : 50px;
 	top : 40px;
 	font-size : 50px;
 }
@@ -54,7 +56,7 @@ body{
     top: 160px;
     left: 0px;
     padding: 30px;
-    width: 1272px;
+    width: 100%;
     height: 500px;
 }
 
@@ -62,13 +64,13 @@ body{
 
 
 #search_input {
-    width: 60%;
+    width: 70vw;
     height: 55px;
     font-size: 20px;
     letter-spacing:2px;
     position: absolute;
-    top: 20px;
     left: 20px;
+	top : -10px;
     border : 2px solid #aaa;
     color : black;
 }
@@ -78,20 +80,37 @@ body{
     border-color : #3E606F;
     color: #3E606F;
     padding: 12px 16px;
+	top : -10px;
     font-size: 20px;
     cursor: pointer;
     position: absolute;
-    top: 20px;
-    right: 30%;
+    left: 15%;
     width: 90px;
     height: 62px;
 }
 
-    #searchbutton:hover {
-        border-color: #eee;
-        color: #eee;
-        background-color: #3E606F;
-    }
+#searchbutton:hover {
+	border-color: #eee;
+	color: #eee;
+	background-color: #3E606F;
+}
+#sinput{
+	position : absolute;
+	width : 70%;
+}
+
+#sbtn{
+	position : absolute;
+	width : 30%;
+	left : 70%
+}
+
+#picture{
+	position : absolute;
+	top : 20%;
+	left : 30%;
+}
+
 
 .ui-autocomplete{
   max-height : 200px;
@@ -103,9 +122,9 @@ body{
 
 .ok {
     position: absolute;
-    right: 7%;
+    right: 10%;
     letter-spacing: 3px;
-    bottom: 0%;
+    bottom: 10%;
     font-size: 20px;
     border: 3px solid;
     border-color: #3E606F;
